Eliminando getFirst() por getIndex().